[package]
name = "assasin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_prototype_lyon = "0.13.0"
rand = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

